--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     </div>
     <div class="tempRadioBtn">
         <div class="custom-control custom-radio">
-            <input type="radio" id="celsius" name="customRadio" class="custom-control-input">
+            <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
             <label class="custom-control-label" for="customRadio1">C°</label>
         </div>
         <div class="custom-control custom-radio">
-            <input type="radio" id="fahrenheit" name="customRadio" class="custom-control-input">
+            <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
             <label class="custom-control-label" for="customRadio2">F°</label>
         </div>
     </div>
