--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="tempPageTitle">
         <h1>Sore Throat Temperature Converter</h1>
     </div>
-    <div class="tempRadioBtn">
+    <div class="tempRadioBtn d-flex flex-row">
         <div class="custom-control custom-radio">
             <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
             <label class="custom-control-label" for="customRadio1">C°</label>
@@ -22,7 +22,13 @@
             <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
             <label class="custom-control-label" for="customRadio2">F°</label>
         </div>
+        <div class=tempInput>
+            <div class="form-group" >
+                <textarea class="form-control border" rows="5" id="tempcomment"></textarea>
+            </div>
+        </div>
     </div>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
