--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <h1>Sore Throat Temperature Converter</h1>
     </div>
     <div class="tempRadioBtn d-flex flex-row">
-        <div class="custom-control custom-radio">
-            <input type="radio" id="customRadio1" name="customRadio" class="custom-control-input">
+        <div class="custom-control custom-radio" id = "tempRadioBtns">
+            <input type="radio" id="customRadio1" name="convertRadio" class="custom-control-input">
             <label class="custom-control-label" for="customRadio1">C°</label>
         </div>
-        <div class="custom-control custom-radio">
-            <input type="radio" id="customRadio2" name="customRadio" class="custom-control-input">
+        <div class="custom-control custom-radio" id="radioConverter">
+            <input type="radio" id="customRadio2" name="convertRadio" class="custom-control-input">
             <label class="custom-control-label" for="customRadio2">F°</label>
         </div>
         <div class=tempInput>
@@ -27,11 +27,20 @@
                 <textarea class="form-control border" rows="5" id="tempcomment"></textarea>
             </div>
         </div>
+        <div id="tempConvertbtn">
+                <button type="button" class="btn btn-secondary">Convert</button>        
+            </div>
     </div>
-    
+    <div id="tempOutPut" class ="text-center">
+    </div>
+    <div id="reset" class ="text-center">
+            <button type="button" class="btn btn-secondary">Reset</button>        
+    </div>
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script> -->
     <script src="main.js"></script>
 </body>
 </html>
